# pg_copilot

./: .gitattributes  .gitignore  README.MD
.claude/: settings.local.json
cpg_enrichment/: ARCHITECTURAL_LAYERS_SUCCESS.md  CPG_SEMANTIC_CHANGES.md  QUICK_START.md  README.md  SESSION_SUMMARY_2025-10-07.md  ast_comments.sc  (+32 more)
xgrammar_tests/: COMPLETION_REPORT.md  FINAL_MODEL_COMPARISON_SUMMARY.md  FINAL_SUMMARY.md  GRAMMAR_FIX_RESULTS.md  IMPLEMENTATION_PLAN.md  INDEX.md  LLAMA_CPP_TEST_RESULTS.md  LLMXCPG_EXPERIMENT_RESULTS.md  MODEL_COMPARISON_REPORT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  V2_TEST_RESULTS.md  analyze_model_comparison.py  cpgql_clean.gbnf  grammar_comparison_results.json  grammar_generated_queries.json  grammar_generated_queries_v2.json  improved_prompts_results.json  inspect_sampler.py  llmxcpg_extended_results.json  llmxcpg_validated_results.json  model_comparison_analysis.json  model_comparison_results.json  pyproject.toml  test_grammar_comparison.py  test_improved_prompts.py  test_llama_cpp_grammar.py  test_llmxcpg_extended.py  test_model_comparison.py  test_v2_fixed_prompts.py  validate_generated_queries.py  validate_llmxcpg_results.py  validated_queries_v2.json
xgrammar_tests/src/xgrammar_tests/: __init__.py  cli.py  config.py  generator.py  grammar_loader.py  joern_e2e.py  sampler.py  tokenizer_alignment.py  validator.py
xgrammar_tests/tests/: test_cli.py  test_grammar_loader.py  test_joern_e2e.py  test_sampler.py  test_tokenizer_alignment.py  test_validator.py
xgrammar_tests/tools/: export_tokenizer_metadata.py  run_joern_e2e.py
(+1842 files in other folders)
