[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xgrammar-tests"
version = "0.1.0"
description = "CPGQL query generator experiments backed by the XGrammar GBNF engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xgrammar>=0.1.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
xgrammar-generate = "xgrammar_tests.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
